--- a/app/src/main/res/layout/keyboard_activity.xml
+++ b/app/src/main/res/layout/keyboard_activity.xml
@@ -68,6 +68,7 @@
                 android:layout_height="match_parent"
                 android:hapticFeedbackEnabled="@{calculatorButton.vibrationOn}"
                 android:onClick="@{calculatorHandler.onClickTaxPlus}"
+                android:onTouch="@{calculatorHandler.onTouch}"
                 android:text="TAX+"
                 app:setTextSize="@{calculatorButton.textSize}" />
         </LinearLayout>
@@ -84,6 +85,7 @@
                 android:layout_height="match_parent"
                 android:hapticFeedbackEnabled="@{calculatorButton.vibrationOn}"
                 android:onClick="@{calculatorHandler.onClickPercentage}"
+                android:onTouch="@{calculatorHandler.onTouch}"
                 android:text="%"
                 app:setTextSize="@{calculatorButton.textSize}" />
 
@@ -94,6 +96,7 @@
                 android:layout_height="match_parent"
                 android:hapticFeedbackEnabled="@{calculatorButton.vibrationOn}"
                 android:onClick="@{calculatorHandler.onClickSquareRoot}"
+                android:onTouch="@{calculatorHandler.onTouch}"
                 android:text="√x"
                 app:setTextSize="@{calculatorButton.textSize}" />
 
@@ -106,6 +109,7 @@
                 android:gravity="center"
                 android:hapticFeedbackEnabled="@{calculatorButton.vibrationOn}"
                 android:onClick="@{calculatorHandler.onClickBackspace}"
+                android:onTouch="@{calculatorHandler.onTouch}"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/backspace" />
